[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssrl-ecg"
version = "0.1.0"
description = "Self-supervised representation learning for ECG-based cardiovascular risk prediction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.2",
    "tqdm>=4.66",
    "wfdb>=4.1",
    "pyyaml>=6.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "scipy>=1.10",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[project.optional-dependencies]
dev = ["black>=23.0", "pytest>=7.0"]
ml = ["xgboost>=2.0", "lightgbm>=4.0", "statsmodels>=0.14"]
analysis = ["scipy>=1.10", "seaborn>=0.12", "statsmodels>=0.14"]
